--- a/v1paint/artist.html
+++ b/v1paint/artist.html
@@ -17,7 +17,7 @@
     <body>
         <!-- 第一區 header nvbar -->
         <header>
-            <a href="#" class="logo"><img src="images/logo.jpg">華梵美術碩士班油畫聯展</a>
+            <a href="#" class="logo"><img src="images/logo.jpg">華梵美術碩士班創作聯展</a>
             <!-- RWD時的按鈕 -->
             <div id="menu-bar" class="fas fa-bars"></div>
                 <nav class="navbar">
@@ -70,19 +70,22 @@
                                 
                             <p>以往的生活是結合商業，現在的人生則是追求藝術，如今選擇歸零放下，進入華梵大學美術與文創研究所重新出發，期望能將多年企業管理、習畫技巧與美術研究結合，激發累積數十年的創作能量，創造更多元的藝術作品</p>
                             <p>創作理念：混搭與融合，身處在多元混搭的時代，透過包容與並存，讓生活多變且精彩</p>
+                            <hr>
                             <h2>作品介紹</h2>
                             <img src="images/golden.jpg" class="work-pic" alt="">
                             <p>《新冠太空》油彩 畫布<br>
                                 80 × 65 cm∣2022<br>
                                 我們對於新冠病毒的未知與鑽研，
                                 就如同人類自古對於太空宇宙的聯想和探索
-                                </p>    
+                                </p>
+                            <hr>        
                             <img src="images/covid-19.jpg" class="work-pic" alt="">
                             <p>《火天金剛》油彩 畫布<br>
                                 80 × 65 cm∣2022<br>
                                 與水天金剛並稱佛教天界護法神的火天金剛，
                                 以彩繪玻璃融合東西宗教藝術
                                 </p>
+                            <hr>
                             <img src="images/fish.jpg" class="work-pic" alt="">
                             <p>《鯉躍龍門》油彩 畫布<br>
                                 80 × 65 cm∣2022<br>
@@ -151,8 +154,6 @@
                             <h2>作品介紹</h2>
                             <img src="images/蕭雅月的作品.jpg" class="work-pic" alt="">
                             <p>文字3</p>    
-                            <img src="images/cathedral.jpg" class="work-pic" alt="">
-                            <p>文字3</p>
                         </div>
                     </div> 
                     <!-- 第四個內容 -->
