--- a/v1paint/department.html
+++ b/v1paint/department.html
@@ -18,7 +18,7 @@
     <body>
         <!-- 第一區 -->
         <header>
-            <a href="#" class="logo"><img src="images/logo.jpg">華梵美術碩士班油畫聯展</a>
+            <a href="#" class="logo"><img src="images/logo.jpg">華梵美術碩士班創作聯展</a>
             <!-- RWD時的按鈕 -->
             <div id="menu-bar" class="fas fa-bars"></div>
                 <nav class="navbar">
