--- a/v1paint/index.html
+++ b/v1paint/index.html
@@ -18,7 +18,7 @@
     <body>
         <!-- 第一區 -->
         <header>
-            <a href="#" class="logo"><img src="images/logo.jpg">華梵美術碩士班油畫聯展</a>
+            <a href="#" class="logo"><img src="images/logo.jpg">華梵美術碩士班創作聯展</a>
             <!-- RWD時的按鈕 -->
             <div id="menu-bar" class="fas fa-bars"></div>
                 <nav class="navbar">
@@ -45,7 +45,7 @@
         </section>
         <section>
             <div class="content">
-                <h2>華梵美術碩士班油畫聯展</h2>
+                <h2>華梵美術碩士班創作聯展</h2>
                 <h3>王家祁 / 徐恒鈞 / 蕭雅月 / 陳岳宏</h3>
 
                 <p>2022.5.25(三) ~ 5.31(二)</p>
