--- a/v1paint/index.html
+++ b/v1paint/index.html
@@ -18,7 +18,8 @@
     <body>
         <!-- 第一區 -->
         <header>
-            <a href="#" class="logo"><img src="images/logo.jpg">華梵美術碩士班創作聯展</a>
+            <!-- <a href="#" class="logo"><img src="images/logo.jpg"></a> -->
+            <h1>不明覺麗 四人聯展</h1>
             <!-- RWD時的按鈕 -->
             <div id="menu-bar" class="fas fa-bars"></div>
                 <nav class="navbar">
@@ -45,14 +46,19 @@
         </section>
         <section>
             <div class="content">
-                <h2>華梵美術碩士班創作聯展</h2>
+                <h2>不 明 覺 麗</h2>
                 <h3>王家祁 / 徐恒鈞 / 蕭雅月 / 陳岳宏</h3>
+                <h4>四人聯展</h4>
 
-                <p>2022.5.25(三) ~ 5.31(二)</p>
-                
-                <p>11:00-19:00 (周一休館)</p>
-                <p>琂樂堂藝文空間</p>
-                <p>台北市迪化街一段3號</p>
+                <p>
+                    2022.5.25(三) ~ 5.31(二)
+                <br>
+                    11:00-19:00 (周一休館)
+                <br>
+                    琂樂堂藝文空間
+                <br>    
+                    台北市迪化街一段3號
+                </p>
 
             </div>
         </section>
