--- a/v1paint/department.html
+++ b/v1paint/department.html
@@ -18,7 +18,8 @@
     <body>
         <!-- 第一區 -->
         <header>
-            <a href="#" class="logo"><img src="images/logo.jpg">華梵美術碩士班創作聯展</a>
+            <a href="#" class="logo"><img src="images/logo.jpg"></a>
+            <h1>華梵美術碩士班創作聯展</h1>
             <!-- RWD時的按鈕 -->
             <div id="menu-bar" class="fas fa-bars"></div>
                 <nav class="navbar">
@@ -45,8 +46,28 @@
         </section>
         <section>
             <div class="department-content">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, sunt atque, at aspernatur tempora ab dolore sequi natus odio, accusantium earum modi. Molestias voluptatem quidem ab nostrum velit fuga est!</p>
+                <h3>
+                    琂樂堂藝文空間
+                <br>    
+                    JOYFUL ART GALLERY
+                </h3>
+                <p>
+                    《說文解字》註釋：「琂，石之似玉者。以玉言聲。」指的是一種如玉質般的原生態之美。琂樂堂藝文空間希望用藝術文化的純粹潔淨，拓展人們的眼界，開闊人們的胸懷
+                </p>
+                <p>    
+                    位於台北市迪化街一段3號的琂樂堂藝文空間，屬於老屋改造的文創展覽場所，提供藝術家、藝術院校師生及藝文界舉辦各類藝術展覽、藝文講座、藝文活動，並向社會大眾推廣藝術人文欣賞教育及藝術收藏的正確觀念與方法，期待大家的共同參與與耕耘
+                </p>
 
+            </div>
+            <div class="picture-content">
+                <img src="images/departmentp1.jpg" alt="">
+                <img src="images/departmentp2.jpg" alt="">
+            </div>
+            <div class="container-1">
+                <div class="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.412377035571!2d121.50812021400313!3d25.05400854364529!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a90b2552ab47%3A0xfcd7a2b9afe5f7c0!2z55CC5qiC5aCC6Jed5paH56m66ZaTIEpPWUZVTCBBUlQgR0FMTEVSWQ!5e0!3m2!1szh-TW!2stw!4v1648475281481!5m2!1szh-TW!2stw" width="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
             </div>
         </section>
         
