--- a/v1paint/introduce.html
+++ b/v1paint/introduce.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>華梵美術碩士班油畫聯展</title>
+        <title>不明覺麗 四人聯展</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- 響應式網站 -->
@@ -16,15 +16,15 @@
     <body>
         <!-- 第一區 header nvbar -->
         <header>
-            <a href="#" class="logo"><img src="images/logo.jpg"></a>
-            <h1>華梵美術碩士班創作聯展</h1>
+            <!-- <a href="#" class="logo"><img src="images/logo.jpg"></a> -->
+            <h1>不明覺麗 四人聯展</h1>
             <!-- RWD時的按鈕 -->
             <div id="menu-bar" class="fas fa-bars"></div>
                 <nav class="navbar">
                     <a href="index.html">首頁</a>
                     <a href="introduce.html">展覽介紹</a>
-                    <a href="artist.html">藝術家與作品介紹</a>
-                    <a href="department.html">華梵大學美術與文創學系</a>
+                    <a href="artist.html">藝術創作者與作品介紹</a>
+                    <a href="department.html">琂樂堂藝文空間</a>
                 </nav>
         </header>
         <!-- 第二區 展覽介紹之jpg -->
