--- a/v1paint/artist.html
+++ b/v1paint/artist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>華梵美術碩士班油畫聯展</title>
+        <title>不明覺麗 四人聯展</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- 響應式網站 -->
@@ -17,8 +17,8 @@
     <body>
         <!-- 第一區 header nvbar -->
         <header>
-            <a href="#" class="logo"><img src="images/logo.jpg"></a>
-            <h1>華梵美術碩士班創作聯展</h1>
+            <!-- <a href="#" class="logo"><img src="images/logo.jpg"></a> -->
+            <h1>不明覺麗 四人聯展</h1>
             <!-- RWD時的按鈕 -->
             <div id="menu-bar" class="fas fa-bars"></div>
                 <nav class="navbar">
