--- a/v1paint/artist.html
+++ b/v1paint/artist.html
@@ -92,19 +92,6 @@
                             <h2>作品介紹</h2>
                             <img src="images/golden.jpg" class="work-pic" alt="">
                             <h5>
-                                《新冠太空》油彩 畫布
-                            <br>
-                                80 × 65 cm∣2022
-                            <br>
-                            </h5>
-                            <p> 
-                                我們對於新冠病毒的未知與鑽研，
-                                就如同人類自古對於太空宇宙的聯想和探索
-                            </p>
-                            
-                            <hr>        
-                            <img src="images/covid-19.jpg" class="work-pic" alt="">
-                            <h5>
                                 《火天金剛》油彩 畫布
                             <br>
                                 80 × 65 cm∣2022
@@ -113,6 +100,18 @@
                             <p>
                                 與水天金剛並稱佛教天界護法神的火天金剛，
                                 以彩繪玻璃融合東西宗教藝術
+                            </p>
+                            <hr>
+                            <img src="images/covid-19.jpg" class="work-pic" alt="">
+                            <h5>
+                                《新冠太空》油彩 畫布
+                            <br>
+                                80 × 65 cm∣2022
+                            <br>
+                            </h5>
+                            <p> 
+                                我們對於新冠病毒的未知與鑽研，
+                                就如同人類自古對於太空宇宙的聯想和探索
                             </p>
                             <hr>
                             <img src="images/fish.jpg" class="work-pic" alt="">
@@ -159,7 +158,7 @@
                                 1995年大學化學系畢業
                             </p>   
                             <p>    
-                                留學法國5年 （1997 - 2002）
+                                留學法國5年 (1997 - 2002)
                                 <br>
                                 巴黎第十一大學水化學研究所博士先修班肄業
                             </p>
@@ -172,15 +171,15 @@
                             <p>    
                                 旅居中國大陸蘇州、上海10年
                                 <br>
-                                開始油畫學習與創作
+                                開始油畫學習與創作 (2003 - 2013)
                             </p>
                             <p>
                                 旅居捷克5年
                                 <br>
-                                開辦個人油畫工作室W
+                                開辦個人油畫工作室W (2013 - 2018)
                             </p>
                             <p>    
-                                1998年返台定居
+                                2018年返台定居
                                 <br>
                                 從事油畫藝術創作達18年
                                 <br>
@@ -225,7 +224,7 @@
                             <hr>
                             <h2>作品介紹</h2>
                             <img src="images/蕭雅月的作品.jpg" class="work-pic" alt="">
-                            <p>文字3</p>    
+                            <h4>文字3</h4>    
                         </div>
                     </div> 
                     <!-- 第四個內容 -->
@@ -252,62 +251,70 @@
                             <p>
                                 陳岳宏生於台灣宜蘭。本科以純藝術創作為主，以人為主要探討對象，並觀察現代人的身體與技術之間的交互關係，透過裝置、立體、繪畫的創作手段，勾勒出對未來的種種想像
                             </p>
-                            <p>    
-                                2020 就讀華梵大學美術系研究所
-                            </p>
-                            <p>
-                                經歷
-                                <br>
-                                2018 礁溪國際藝術創作營-工作人員
-                                <br>
-                                2018 至四川美術學院交換
-                                <br>
-                                2018 入選四川美術學院第22屆學生作品年展
-                            </p>
-                            <p>
-                                個展
-                                <br>
-                                2018「未知場域」個展，Arc cafe，深坑，臺灣
-                                聯展
-                                <br>
-                                2017「同鄉異夢」，生活科技暨美術館，宜蘭，臺灣
-                                <br>
-                                2018「回‧歸」，璞 藝術空間，宜蘭，臺灣
-                                <br>
-                                2018「人的境況–混種與回返」，郭木生文教基金會，臺北，臺灣
-                                <br>
-                                2018「UNKNOW 雙個展」，青田十六，臺北，臺灣
-                                <br>
-                                2019 秋季當代藝術沙龍展 ，台北收藏交易中心，臺北，臺灣
-                                <br>
-                                2019「靈場x反應」，圖肆藝術空間，新北，臺灣
-                                <br>
-                                2019 「後山集」，生活科技暨美術館，宜蘭，臺灣
-                                <br>
-                                2019 「光源。川美學思」，圖肆藝術空間，新北，臺灣
-                                <br>
-                                2020 「黑暗樂章」，華梵大學-覺照樓一樓展場，新北，臺灣
-                                <br>
-                                2021 「人，似未完整」，圖肆藝術空間，新北，臺灣
-                            </p>    
-                            <p>    
+                            <div class="text-version-1">
+                                <p>    
+                                    2020 &nbsp; 就讀華梵大學美術系研究所
+                                </p>
+                                <h1>
+                                    經歷
+                                </h1>    
+                                <p>
+                                    2018 &nbsp; 礁溪國際藝術創作營-工作人員
+                                    <br>
+                                    2018 &nbsp; 至四川美術學院交換
+                                    <br>
+                                    2018 &nbsp; 入選四川美術學院第22屆學生作品年展
+                                </p>
+                                <h1>
+                                    個展
+                                </h1>
+                                <p>
+                                    2018  &nbsp;「未知場域」個展，Arc cafe，深坑，臺灣
+                                </p>
+                                <h1>    
+                                    聯展
+                                </h1>    
+                                <p>
+                                    2017  &nbsp;「同鄉異夢」，生活科技暨美術館，宜蘭，臺灣
+                                    <br>
+                                    2018  &nbsp;「回‧歸」，璞 藝術空間，宜蘭，臺灣
+                                    <br>
+                                    2018  &nbsp;「人的境況–混種與回返」，郭木生文教基金會，臺北，臺灣
+                                    <br>
+                                    2018  &nbsp;「UNKNOW 雙個展」，青田十六，臺北，臺灣
+                                    <br>
+                                    2019 &nbsp; 秋季當代藝術沙龍展 ，台北收藏交易中心，臺北，臺灣
+                                    <br>
+                                    2019  &nbsp;「靈場x反應」，圖肆藝術空間，新北，臺灣
+                                    <br>
+                                    2019  &nbsp;「後山集」，生活科技暨美術館，宜蘭，臺灣
+                                    <br>
+                                    2019  &nbsp;「光源。川美學思」，圖肆藝術空間，新北，臺灣
+                                    <br>
+                                    2020  &nbsp;「黑暗樂章」，華梵大學-覺照樓一樓展場，新北，臺灣
+                                    <br>
+                                    2021  &nbsp;「人，似未完整」，圖肆藝術空間，新北，臺灣
+                                </p>
+                            </div>  
+                        <div class="self-introduce">
+                            <p>   
                                 陳岳宏 Chen,Yue-Hung (1997)
                                 <br>
-                                mail :shit7588@gmail.com
+                                mail : shit7588@gmail.com
                                 <br>
-                                web : 
-                                <br>   
+                                web :    
                                 <a href="https://instagram.com/chenyuehung?utm_medium=copy_link">https://instagram.com/chenyuehung?utm_medium=copy_link</a>    
                                 <br>
-                                +886978872499
+                                phone : +886978872499
                             </p>
+                        </div>
                             <hr>    
                             <h2>作品介紹</h2>
                             <img src="images/陳岳宏p1.jpg" class="work-pic" alt="">
-                            <p>文字4</p>
+                            <h4>文字4</h4>
                             <hr>    
                             <img src="images/陳岳宏p2.jpg" class="work-pic" alt="">
-                            <p>文字4</p>
+                            <h4>文字4</h4>
                         </div>
                     </div>  
                 </div>
