--- a/v1paint/department.html
+++ b/v1paint/department.html
@@ -45,6 +45,9 @@
         <!-- 第三區 文字介紹 -->
         </section>
         <section>
+            <div class="menu-pic">
+                <img src="images/department-menu.jpg" alt="">
+            </div>
             <div class="department-content">
                 <h3>
                     琂樂堂藝文空間
