--- a/v1paint/introduce.html
+++ b/v1paint/introduce.html
@@ -34,7 +34,9 @@
                 <div class="row">
                     <div class="col-12 col-md-12">
                         <div class="introduce-content">
-                            <h3>不明覺麗 -- 王家祁、徐恒鈞、蕭雅月、陳岳宏 四人聯展</h3>
+                            <h3>雖不明 ‧ 但覺麗</h3>
+                            <br>
+                            <h2>王家祁/徐恒鈞/蕭雅月/陳岳宏 <br>四人聯展</h2>
                             <p>
                                 
 
