--- a/v1paint/index.html
+++ b/v1paint/index.html
@@ -37,8 +37,11 @@
 
         <!-- 第二區 首頁 -->
         <section class="home" id="home">
-            <div class="picture">
-                <!-- <img src="images/the-town-bg-01.jpg" alt=""> -->
+            <div class="banner-desktop">
+                <img src="images/banner800x600.jpg" alt="">
+            </div>
+            <div class="banner-mobile">
+                <img src="images/phone-banner.jpg" alt="">
             </div>
             
 
