--- a/v1paint/artist.html
+++ b/v1paint/artist.html
@@ -29,7 +29,14 @@
                 </nav>
         </header>
         <!-- 第二區 藝術家及作品介紹 -->
-        <section class="artist-first"></section>
+        <section class="artist-first">
+            <div class="banner-desktop">
+                <img src="images/banner800x600.jpg" alt="">
+            </div>
+            <div class="banner-mobile">
+                <img src="images/phone-banner.jpg" alt="">
+            </div>
+        </section>
 
         <div class="container">
             <!-- <img src="images/the-town-bg-01.jpg" class="menu-pic"> -->
