--- a/v1paint/introduce.html
+++ b/v1paint/introduce.html
@@ -28,7 +28,14 @@
                 </nav>
         </header>
         <!-- 第二區 展覽介紹之jpg -->
-        <section class="introduce"></section>
+        <section class="introduce">
+            <div class="banner-desktop">
+                <img src="images/banner800x600.jpg" alt="">
+            </div>
+            <div class="banner-mobile">
+                <img src="images/phone-banner.jpg" alt="">
+            </div>
+        </section>
         <div class="box">
             <div class="container">
                 <div class="row">
