--- a/v1paint/department.html
+++ b/v1paint/department.html
@@ -26,7 +26,7 @@
                     <a href="index.html">首頁</a>
                     <a href="introduce.html">展覽介紹</a>
                     <a href="artist.html">藝術創作者與作品介紹</a>
-                    <a href="department.html">琂樂堂藝文空間</a>
+                    <a href="department.html">琂樂堂臺北藝文空間</a>
                 </nav>
 
 
@@ -50,15 +50,15 @@
             </div>
             <div class="department-content">
                 <h3>
-                    琂樂堂藝文空間
+                    琂樂堂臺北藝文空間
                 <br>    
                     JOYFUL ART GALLERY
                 </h3>
                 <p>
-                    《說文解字》註釋：「琂，石之似玉者。以玉言聲。」指的是一種如玉質般的原生態之美。琂樂堂藝文空間希望用藝術文化的純粹潔淨，拓展人們的眼界，開闊人們的胸懷
+                    《說文解字》註釋：「琂，石之似玉者。以玉言聲。」指的是一種如玉質般的原生態之美。琂樂堂臺北藝文空間希望用藝術文化的純粹潔淨，拓展人們的眼界，開闊人們的胸懷
                 </p>
                 <p>    
-                    位於台北市迪化街一段3號的琂樂堂藝文空間，屬於老屋改造的文創展覽場所，提供藝術家、藝術院校師生及藝文界舉辦各類藝術展覽、藝文講座、藝文活動，並向社會大眾推廣藝術人文欣賞教育及藝術收藏的正確觀念與方法，期待大家的共同參與與耕耘
+                    位於台北市迪化街一段3號的琂樂堂臺北藝文空間，屬於老屋改造的文創展覽場所，提供藝術家、藝術院校師生及藝文界舉辦各類藝術展覽、藝文講座、藝文活動，並向社會大眾推廣藝術人文欣賞教育及藝術收藏的正確觀念與方法，期待大家的共同參與與耕耘
                 </p>
 
             </div>
