--- a/v1paint/artist.html
+++ b/v1paint/artist.html
@@ -25,7 +25,8 @@
                     <a href="index.html">首頁</a>
                     <a href="introduce.html">展覽介紹</a>
                     <a href="artist.html">藝術創作者與作品介紹</a>
-                    <a href="department.html">琂樂堂藝文空間</a>
+                    <a href="department.html">琂樂堂臺北藝文空間</a>
+                    <a href="one-day-travel.html">迪化商圈文創一日遊</a>
                 </nav>
         </header>
         <!-- 第二區 藝術家及作品介紹 -->
