--- a/v1paint/department.html
+++ b/v1paint/department.html
@@ -27,6 +27,7 @@
                     <a href="introduce.html">展覽介紹</a>
                     <a href="artist.html">藝術創作者與作品介紹</a>
                     <a href="department.html">琂樂堂臺北藝文空間</a>
+                    <a href="one-day-travel.html">迪化商圈文創一日遊</a>
                 </nav>
 
 
