--- a/v1paint/introduce.html
+++ b/v1paint/introduce.html
@@ -31,7 +31,7 @@
         <!-- 第二區 展覽介紹之jpg -->
         <section class="introduce">
             <div class="banner-desktop">
-                <img src="images/banner800x600.jpg" alt="">
+                <img src="images/banner1920x1280.jpeg" alt="">
             </div>
             <div class="banner-mobile">
                 <img src="images/phone-banner.jpg" alt="">
