--- a/v1paint/department.html
+++ b/v1paint/department.html
@@ -47,7 +47,7 @@
         </section>
         <section>
             <div class="menu-pic">
-                <img src="images/department-menu.jpg" alt="">
+                <img src="images/department-picture.jpg" alt="">
             </div>
             <div class="department-content">
                 <h3>
@@ -69,6 +69,7 @@
             </div>
             <div class="container-1">
                 <div class="map">
+                    <p>琂樂堂臺北藝文空間</p>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.412377035571!2d121.50812021400313!3d25.05400854364529!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a90b2552ab47%3A0xfcd7a2b9afe5f7c0!2z55CC5qiC5aCC6Jed5paH56m66ZaTIEpPWUZVTCBBUlQgR0FMTEVSWQ!5e0!3m2!1szh-TW!2stw!4v1648475281481!5m2!1szh-TW!2stw" width="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
