--- a/v1paint/department.html
+++ b/v1paint/department.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>不明覺麗 四人聯展</title>
+        <title>不明覺麗 油畫雕塑聯展</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- 響應式網站 -->
@@ -19,7 +19,7 @@
         <!-- 第一區 -->
         <header>
             <!-- <a href="#" class="logo"><img src="images/logo.jpg"></a> -->
-            <h1>不明覺麗 四人聯展</h1>
+            <h1>不明覺麗 油畫雕塑聯展</h1>
             <!-- RWD時的按鈕 -->
             <div id="menu-bar" class="fas fa-bars"></div>
                 <nav class="navbar">
