--- a/v1paint/index.html
+++ b/v1paint/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>不明覺麗 四人聯展</title>
+        <title>不明覺麗 油畫雕塑聯展</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- 響應式網站 -->
@@ -19,7 +19,7 @@
         <!-- 第一區 -->
         <header>
             <!-- <a href="#" class="logo"><img src="images/logo.jpg"></a> -->
-            <h1>不明覺麗 四人聯展</h1>
+            <h1>不明覺麗 油畫雕塑聯展</h1>
             <!-- RWD時的按鈕 -->
             <div id="menu-bar" class="fas fa-bars"></div>
                 <nav class="navbar">
@@ -39,7 +39,7 @@
         <!-- 第二區 首頁 -->
         <section class="home" id="home">
             <div class="banner-desktop">
-                <img src="images/banner1920x1280.jpeg" alt="">
+                <img src="images/bannernew.jpg" alt="">
             </div>
             <div class="banner-mobile">
                 <img src="images/phone-banner.jpg" alt="">
@@ -52,7 +52,7 @@
             <div class="content">
                 <h2>不 明 覺 麗</h2>
                 <h3>王家祁 / 徐恒鈞 / 蕭雅月 / 陳岳宏</h3>
-                <h4>四人聯展</h4>
+                <h4>油畫雕塑聯展</h4>
 
                 <p>
                     2022.5.25(三) ~ 5.31(二)
