--- a/v1paint/introduce.html
+++ b/v1paint/introduce.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>不明覺麗 四人聯展</title>
+        <title>不明覺麗 油畫雕塑聯展</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- 響應式網站 -->
@@ -17,7 +17,7 @@
         <!-- 第一區 header nvbar -->
         <header>
             <!-- <a href="#" class="logo"><img src="images/logo.jpg"></a> -->
-            <h1>不明覺麗 四人聯展</h1>
+            <h1>不明覺麗 油畫雕塑聯展</h1>
             <!-- RWD時的按鈕 -->
             <div id="menu-bar" class="fas fa-bars"></div>
                 <nav class="navbar">
@@ -31,7 +31,7 @@
         <!-- 第二區 展覽介紹之jpg -->
         <section class="introduce">
             <div class="banner-desktop">
-                <img src="images/banner1920x1280.jpeg" alt="">
+                <img src="images/bannernew.jpg" alt="">
             </div>
             <div class="banner-mobile">
                 <img src="images/phone-banner.jpg" alt="">
@@ -44,7 +44,7 @@
                         <div class="introduce-content">
                             <h3>雖不明 ‧ 但覺麗</h3>
                             <br>
-                            <h2>王家祁/徐恒鈞/蕭雅月/陳岳宏 <br>四人聯展</h2>
+                            <h2>王家祁/徐恒鈞/蕭雅月/陳岳宏 <br>油畫雕塑聯展</h2>
                             <p>
                                 
 
@@ -52,10 +52,10 @@
                             </p>
 
                             <p>       
-                                來自美術、餐飲、保健等不同領域的藝術愛好者，相遇在華梵大學美術與文創碩士班，基於對油畫雕塑的熱愛，以聯展方式共同發表『人與技術的連結』、『神話混搭』、『自然生態』、『空靜禪定』等多元風格的創作作品
+                                來自美術、餐飲、保健等不同領域的藝術愛好者，相遇在華梵大學美術與文創碩士班，基於對油畫雕塑的熱愛，以聯展方式共同發表『人與技術的連結』、『神話彩繪』、『自然生態』、『空靜禪定』等多元風格的創作作品
                             </p>         
                             <p>    
-                                5月25日至5月31日於琂樂堂臺北藝文空間展出的「不明覺麗」四人聯展，以油畫、陶藝創作為主，共有20件作品參展。四位藝術創作者以其人生歷練與生活體驗，加上對藝術的感知力與表現力，透過手繪與捏塑，引導觀者思考生命與信仰的重新建構
+                                5月25日至5月31日於琂樂堂臺北藝文空間展出的「不明覺麗」油畫雕塑聯展，以油畫、陶藝創作為主，共有20件作品參展。四位藝術創作者以其人生歷練與生活體驗，加上對藝術的感知力與表現力，透過手繪與捏塑，引導觀者思考生命與信仰的重新建構
                             </p>        
                             <p>    
                                 生命的沉思是藝術家創作靈感的來源，信仰的融合則是啟發內心的催化劑。王家祁、徐恒鈞、蕭雅月、陳岳宏等四位藝術創作者，透過探索自我和生命的歴程，將心靈感受轉化為創作養分，引領觀者走入沉思、超脫、超越的意境，感受藝術創作的美學感動。歡迎蒞臨現場，感受美的藝術饗宴。
