--- a/v1paint/introduce.html
+++ b/v1paint/introduce.html
@@ -46,9 +46,7 @@
                             <br>
                             <h2>王家祁/徐恒鈞/蕭雅月/陳岳宏 <br>油畫雕塑聯展</h2>
                             <p>
-                                
-
-                                    生命與信仰的重新建構，於聯展創作中多元呈現，端視您如何解讀，雖不明白，但覺美麗
+                                生命與信仰的重新建構，於聯展創作中多元呈現，端視您如何解讀，或許您不了解作品訴求，或許您的想法與創作者迴異，但這都不影響作品本身想傳達給您美的概念，雖不明白，但覺美麗
                             </p>
 
                             <p>       
