--- a/v1paint/index.html
+++ b/v1paint/index.html
@@ -50,7 +50,7 @@
         </section>
         <section>
             <div class="content">
-                <h2>不 明 覺 麗</h2>
+                <h2>華梵大學美術與文創碩士班</h2>
                 <h3>王家祁 / 徐恒鈞 / 蕭雅月 / 陳岳宏</h3>
                 <h4>油畫雕塑聯展</h4>
 
