--- a/v1paint/artist.html
+++ b/v1paint/artist.html
@@ -264,7 +264,7 @@
                             <h5>
                                 《虎嘯山林》
                             <br>
-                                油彩 畫布 花生殼∣65 × 80 cm2021
+                                油彩 畫布 花生殼∣65 × 80 cm∣2021
                             </h5>
                             <hr>
                            
@@ -348,37 +348,37 @@
                             <h2>作品介紹</h2>
                             <img src="images/月p1.jpg" class="work-pic" alt="">
                             <h5>
-                                坐忘 銅，天然鑽石
+                                《坐忘 銅》
                             <br>
-                                15 × 12 × 17.6 cm
+                                天然鑽石∣15 × 12 × 17.6 cm
                             </h5>
                             <hr>
                             <img src="images/月p2.jpg" class="work-pic" alt="">
                             <h5>
-                                地久 銅，天然鑽石
+                                《地久 銅》
                             <br>
-                                19 × 11.5 × 17 cm
+                                天然鑽石∣19 × 11.5 × 17 cm
                             </h5>
                             <hr>
                             <img src="images/月p3.jpg" class="work-pic" alt="">
                             <h5>
-                                水濟 銅，天然鑽石
+                                《水濟 銅》
                             <br>
-                                16 × 9 × 17.5 cm
+                                天然鑽石∣16 × 9 × 17.5 cm
                             </h5>
                             <hr>
                             <img src="images/月p4.jpg" class="work-pic" alt="">
                             <h5>
-                                火薀 銅，天然鑽石
+                                《火薀 銅》
                             <br>
-                                14 × 10 × 16.3 cm
+                                天然鑽石∣14 × 10 × 16.3 cm
                             </h5>
                             <hr>
                             <img src="images/月p5.jpg" class="work-pic" alt="">
                             <h5>
-                                風逸 銅，天然鑽石
+                                《風逸 銅》
                             <br>
-                                22 × 12 × 17 cm
+                                天然鑽石∣22 × 12 × 17 cm
                             </h5>
             
                         </div>
