--- a/v1paint/one-day-travel.html
+++ b/v1paint/one-day-travel.html
@@ -54,6 +54,9 @@
             <h2 class="heading-content">
                 迪化街商圈曾經是北部最繁華的地區之一，走過百年的歷史，至今仍留下許多美麗的紅磚洋樓、閩南式矮房、巴洛克建築。參觀聯展後，不妨來個文創藝術之旅吧~
             </h2>
+            <h4 class="point-content">
+                請點選圖片瀏覽景點介紹
+            </h4>
             <div class="box-container_1">
                 <div class="box">
                     <img src="images/大稻埕戲苑.jpg">
@@ -82,7 +85,7 @@
                     <img src="images/勾癮咖啡.jpg">
                     <h3 class="location">勾癮咖啡 GOEE COFFEE</h3>
                     <div class="box-content">
-                        <p>看完聯展、屈臣氏大藥房、新芳春茶行後，可至勾癮咖啡圓環店(天水路13號)歇腳聊天，休息片刻再探迪化商圈</p>
+                        <p>看完聯展、屈臣氏大藥房、新芳春茶行後，可至勾癮咖啡天水圓環店(天水路13號)歇腳聊天，休息片刻再探迪化商圈</p>
                     </div>
                 </div>
             </div>
