--- a/v1paint/artist.html
+++ b/v1paint/artist.html
@@ -348,37 +348,37 @@
                             <h2>作品介紹</h2>
                             <img src="images/月p1.jpg" class="work-pic" alt="">
                             <h5>
-                                《坐忘 銅》
+                                《坐忘》
                             <br>
-                                天然鑽石∣15 × 12 × 17.6 cm
+                                銅 天然鑽石∣15 × 12 × 17.6 cm
                             </h5>
                             <hr>
                             <img src="images/月p2.jpg" class="work-pic" alt="">
                             <h5>
-                                《地久 銅》
+                                《地久》
                             <br>
-                                天然鑽石∣19 × 11.5 × 17 cm
+                            銅 天然鑽石∣19 × 11.5 × 17 cm
                             </h5>
                             <hr>
                             <img src="images/月p3.jpg" class="work-pic" alt="">
                             <h5>
-                                《水濟 銅》
+                                《水濟》
                             <br>
-                                天然鑽石∣16 × 9 × 17.5 cm
+                            銅 天然鑽石∣16 × 9 × 17.5 cm
                             </h5>
                             <hr>
                             <img src="images/月p4.jpg" class="work-pic" alt="">
                             <h5>
-                                《火薀 銅》
+                                《火薀》
                             <br>
-                                天然鑽石∣14 × 10 × 16.3 cm
+                            銅 天然鑽石∣14 × 10 × 16.3 cm
                             </h5>
                             <hr>
                             <img src="images/月p5.jpg" class="work-pic" alt="">
                             <h5>
-                                《風逸 銅》
+                                《風逸》
                             <br>
-                                天然鑽石∣22 × 12 × 17 cm
+                            銅 天然鑽石∣22 × 12 × 17 cm
                             </h5>
             
                         </div>
