--- a/v1paint/index.html
+++ b/v1paint/index.html
@@ -65,10 +65,17 @@
                 <br>    
                     <a href="https://goo.gl/maps/Mw6xdMLmQYpGwEFf8" style="color:black">台北市迪化街一段3號</a>
                 </p>
-
+                <hr>
             </div>
         </section>
-        
+        <section>
+            <div class="report-container">
+                <div class="report-text">
+                    <h2>媒體報導</h2>
+            <div class="report-link"> 
+                <a href="https://newsmedia.today/%e6%8e%a2%e7%b4%a2%e8%87%aa%e6%88%91-%e5%8f%83%e9%80%8f%e7%94%9f%e5%91%bd-%e5%9b%9b%e4%bd%8d%e8%97%9d%e8%a1%93%e5%ae%b6%e8%81%af%e5%b1%95-%e5%9c%a8%e8%99%9b%e5%af%a6%e4%b8%8d%e6%98%8e%e6%b0%9b/"><img src="images/report-img.jpg"></a>
+                <a href="https://newsmedia.today/%e6%8e%a2%e7%b4%a2%e8%87%aa%e6%88%91-%e5%8f%83%e9%80%8f%e7%94%9f%e5%91%bd-%e5%9b%9b%e4%bd%8d%e8%97%9d%e8%a1%93%e5%ae%b6%e8%81%af%e5%b1%95-%e5%9c%a8%e8%99%9b%e5%af%a6%e4%b8%8d%e6%98%8e%e6%b0%9b/" style="color:black">探索自我 參透生命 四位藝術家聯展 <br>在虛實不明氛圍中找到覺麗意境</a>
+        </section>
 
     </body>
 
