--- a/v1paint/artist.html
+++ b/v1paint/artist.html
@@ -275,15 +275,20 @@
                                 油彩 畫布 花生殼∣65 × 80 cm∣2022
                             </h5>
                             <hr>
-                            
-                            <img src="images/王家祈p2.jpg" class="work-pic" alt="">
+                            <img src="images/王家祈p2.jpeg" class="work-pic" alt="">
                             <h5>
-                                《憤怒的哥基拉》
+                                《乘風追月》
                             <br>
-                                油彩 畫布 花生殼∣91 × 116.5 cm∣2021
+                                油彩 畫布∣27 × 22 cm∣2021
                             </h5>
                             <hr>
-        
+                            <img src="images/王家祈p8.jpeg" class="work-pic" alt="">
+                            <h5>
+                                《寧拙毋巧，寧丑毋媚》
+                            <br>
+                                油彩 畫布∣65 × 50 cm∣2021
+                            </h5>
+                            <hr>
                             <img src="images/王家祈p3.jpg" class="work-pic" alt="">
                             <h5>
                                 《瑰麗大霸尖》
