--- a/v1paint/artist.html
+++ b/v1paint/artist.html
@@ -520,11 +520,11 @@
                                 壓克力 畫布∣120 x 120 cm∣2022
                             </h5>
                             <hr>
-                            <img src="images/陳岳宏p1.jpeg" class="work-pic" alt="">
+                            <img src="images/陳岳宏p1.jpg" class="work-pic" alt="">
                             <h5>
-                                《被放置於x、y軸後的發展可能》
+                                《關於一項拍攝工程》
                             <br>
-                                壓克力 畫布∣116.5 x 91 cm∣2022
+                                壓克力 畫布∣195 x 135 cm∣2022
                             </h5>
                         </div>
                     </div>  
